# MAGPIE

./: .gitignore  LICENSE  README.md  pyproject.toml
src/magpie/: cli.py
src/magpie/steps/: align.py  barrnap.py  checkm.py  choose_best.py  ec_table.py  eggnog.py  gtdbtk.py  hmm_build.py  hmm_prep.py  install_picrust2_ref.py  iqtree.py  ko_table.py  package_ref.py  prep.py  qc.py  raxml_check.py  raxml_evaluate.py  rrna.py  taxonomy.py  validate.py
src/magpie/util/: deps.py  shell.py
